--- a/L14End/src/main/resources/templates/layout.html
+++ b/L14End/src/main/resources/templates/layout.html
@@ -6,9 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
 
-    <link rel="stylesheet" href="../static/assets/css/bootstrap.min.css" th:href="@{/assets/css/bootstrap.min.css}" />
-    <link rel="stylesheet" href="../static/assets/css/font-awesome.min.css" th:href="@{/assets/css/font-awesome.min.css}"/>
-    <link rel="stylesheet" href="../static/assets/css/jquery-ui-1.10.3.full.min.css" th:href="@{/assets/css/jquery-ui-1.10.3.full.min.css}"/>
+    <link rel="stylesheet" href="../static/assets/css/bootstrap.min.css" th:href="@{/assets/css/bootstrap.min.css}"/>
+    <link rel="stylesheet" href="../static/assets/css/font-awesome.min.css"
+          th:href="@{/assets/css/font-awesome.min.css}"/>
+    <link rel="stylesheet" href="../static/assets/css/jquery-ui-1.10.3.full.min.css"
+          th:href="@{/assets/css/jquery-ui-1.10.3.full.min.css}"/>
     <link rel="stylesheet" href="../static/assets/css/datepicker.css" th:href="@{/assets/css/datepicker.css}"/>
     <link rel="stylesheet" href="../static/assets/css/googleFamily.css" th:href="@{/assets/css/googleFamily.css}"/>
     <link rel="stylesheet" href="../static/assets/css/ui.jqgrid.css" th:href="@{/assets/css/ui.jqgrid.css}"/>
@@ -31,11 +33,14 @@
     <script src="../static/assets/js/html5shiv.js" th:src="@{/assets/js/html5shiv.js}"></script>
     <script src="../static/assets/js/respond.min.js" th:src="@{/assets/js/respond.min.js}"></script>
     <![endif]-->
-    <script src="../static/assets/js/jqGrid/jquery.jqGrid.min.js" th:src="@{/assets/js/jqGrid/jquery.jqGrid.min.js}"></script>
-    <script src="../static/assets/js/jqGrid/i18n/grid.locale-en.js" th:src="@{/assets/js/jqGrid/i18n/grid.locale-en.js}"></script>
+    <script src="../static/assets/js/jqGrid/jquery.jqGrid.min.js"
+            th:src="@{/assets/js/jqGrid/jquery.jqGrid.min.js}"></script>
+    <script src="../static/assets/js/jqGrid/i18n/grid.locale-en.js"
+            th:src="@{/assets/js/jqGrid/i18n/grid.locale-en.js}"></script>
     <script src="../static/assets/js/bootstrap.min.js" th:src="@{/assets/js/bootstrap.min.js}"></script>
     <script src="../static/assets/js/vue.js" th:src="@{/assets/js/vue.js}"></script>
-    <script src="../static/assets/js/jquery-ui-1.10.3.custom.min.js" th:src="@{/assets/js/jquery-ui-1.10.3.custom.min.js}"></script>
+    <script src="../static/assets/js/jquery-ui-1.10.3.custom.min.js"
+            th:src="@{/assets/js/jquery-ui-1.10.3.custom.min.js}"></script>
     <script src="../static/assets/js/jquery.slimscroll.min.js" th:src="@{/assets/js/jquery.slimscroll.min.js}"></script>
     <script src="../static/assets/js/chosen.jquery.min.js" th:src="@{/assets/js/chosen.jquery.min.js}"></script>
     <script src="../static/assets/js/ace-elements.min.js" th:src="@{/assets/js/ace-elements.min.js}"></script>
@@ -45,7 +50,8 @@
     <script src="../static/assets/js/jquery.messager.js" th:src="@{/assets/js/jquery.messager.js}"></script>
     <script src="../static/assets/js/layer/layer.js" th:src="@{/assets/js/layer/layer.js}"></script>
     <script src="../static/assets/js/bootbox.min.js" th:src="@{/assets/js/bootbox.min.js}"></script>
-    <script src="../static/assets/js/validate/jquery.validate.min.js" th:src="@{/assets/js/validate/jquery.validate.min.js}"></script>
+    <script src="../static/assets/js/validate/jquery.validate.min.js"
+            th:src="@{/assets/js/validate/jquery.validate.min.js}"></script>
     <script src="../static/assets/js/validate/messages_zh.js" th:src="@{/assets/js/validate/messages_zh.js}"></script>
     <script src="../static/assets/js/common.js" th:src="@{/assets/js/common.js}"></script>
 
