--- a/L14End/src/main/resources/templates/error.html
+++ b/L14End/src/main/resources/templates/error.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org" layout:decorate="~{layout}">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.w3.org/1999/xhtml" layout:decorate="~{layout}">
 <head>
     <title>Spring Boot管理后台</title>
     <script type="text/javascript">
