--- a/L14End/src/main/resources/templates/error/500.html
+++ b/L14End/src/main/resources/templates/error/500.html
@@ -2,12 +2,13 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>页面未找到</title>
+    <title>Title</title>
 </head>
 <body>
-动态404错误页面
+动态500错误页面
 <p th:text="${error}"></p>
 <p th:text="${status}"></p>
 <p th:text="${message}"></p>
+<p th:text="${msg}"></p>
 </body>
 </html>
